Updated machine translations

--- a/shared/locales/src/jamboree/machine-en.json
+++ b/shared/locales/src/jamboree/machine-en.json
@@ -915,6 +915,10 @@
     "original": "Mijn account",
     "translation": "My account"
   },
+  "a4dbfbda-407b-4519-8c91-4a4b1eb70fd5": {
+    "original": "Hier kan je je inschrijvingen opdelen in verschillende scoutsjaren. Wisselen tussen scoutsjaren kan je doen in het tabblad ‘Leden’, daar kan je ook het huidige (actieve) scoutsjaar instellen. ",
+    "translation": "Here you can split your registrations over different scout years. You can switch between scout years in the ‘Members’ tab, where you can also configure the current (active) scout year."
+  },
   "a5332744-e6e1-4af9-b05c-cbc21515c4d0": {
     "original": "Eenheidsnummer betalende groep",
     "translation": "Unit number paying group"
