--- a/shared/locales/src/keeo/machine-fr.json
+++ b/shared/locales/src/keeo/machine-fr.json
@@ -919,6 +919,10 @@
     "original": "Muziekeenheid",
     "translation": "Unité musique"
   },
+  "a4dbfbda-407b-4519-8c91-4a4b1eb70fd5": {
+    "original": "Hier kan je je inschrijvingen opdelen in verschillende scoutsjaren. Wisselen tussen scoutsjaren kan je doen in het tabblad ‘Leden’, daar kan je ook het huidige (actieve) scoutsjaar instellen. ",
+    "translation": "Ici, vous pouvez répartir vos inscriptions selon différentes années scoutes. Pour passer d'une année scoute à l'autre, rendez-vous dans l’onglet « Membres », où vous pouvez également définir l'année scoute active."
+  },
   "a5332744-e6e1-4af9-b05c-cbc21515c4d0": {
     "original": "Eenheidsnummer betalende groep",
     "translation": "Numéro d'unité du groupe payant"
