Reduced errors with requirePlatformMembership
fixes STA-885

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2702,8 +2702,8 @@
   "ca2235bb-f789-4859-899b-03c1d1ac2684": "Restricties",
   "912639c7-e301-463e-b2d3-16b912848330": "Hoe oud het lid is op 31/12/",
   "49030aa4-f77c-4db5-b976-2125675aae66": "Ter referentie: leden uit het eerste leerjaar zijn 6 jaar op 31 december. Leden uit het eerste secundair zijn 12 jaar op 31 december.",
-  "b0d2d30a-f641-473a-91c7-4ab2297f25b1": "Aansluiting is verplicht",
-  "272cfcc9-e917-4e74-8952-076b8f2e8b23": "Een lid moet een aansluiting hebben op de dag van de inschrijving.",
+  "b0d2d30a-f641-473a-91c7-4ab2297f25b1": "Verplicht actieve aansluiting bij #koepel vóór leden kunnen inschrijven",
+  "272cfcc9-e917-4e74-8952-076b8f2e8b23": "Leden moeten een andere aansluiting hebben (manueel aangemaakt of automatisch via een andere inschrijving bij een standaard inschrijvingsgroep) op het moment ze inschrijven, anders kunnen ze niet inschrijven.",
   "e7319239-1924-462c-bdfb-b9a29d875c41": "Verplicht andere inschrijving",
   "7aa7f71d-cd2c-4fb4-b4e6-4085738c1e60": "Groepsinschrijvingen",
   "9dc28ec0-750c-464e-95f1-fa55b7cf3390": "Een hoofdbeheerder van een groep kan meerdere leden inschrijven en schiet de betaling voor. De leden betalen vervolgens via een openstaand bedrag het geld terug aan hun groep.",
