--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5784,5 +5784,20 @@
   "0838734b-4388-49e9-b96b-ad15883a219b": "Voeg bij voorkeur een jaartal toe aan de naam.",
   "a4dbfbda-407b-4519-8c91-4a4b1eb70fd5": "Hier kan je je inschrijvingen opdelen in verschillende werkjaren. Wisselen tussen werkjaren kan je doen in het tabblad ‘Leden’, daar kan je ook het huidige (actieve) werkjaar instellen. ",
   "079afc7a-6ccb-4c7f-b739-24198b0cfec2": "Actief",
-  "a7f3e9ef-7d56-4648-91c8-280d6170617c": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep (verhinder inschrijving bij leeftijdsgroep)."
+  "a7f3e9ef-7d56-4648-91c8-280d6170617c": "{member} voldoet niet aan de voorwaarden om in te schrijven voor deze groep (verhinder inschrijving bij leeftijdsgroep).",
+  "5cdeae87-7fc9-4b46-b384-f8dabb022a32": "stuks",
+  "7447ec38-44b1-448e-8745-c5aebbdf846b": "stuk",
+  "75b1afbb-3595-40da-a97f-fef5172fe58e": "Verberg het beschikbare aantal stuks als voorraad groter is dan...",
+  "c6dc2ed9-f90a-425d-970b-dde1ab00d564": "Stamhoofd zal de de beschikbare voorraad verbergen als er nog meer dan {showStockBelow } stuks beschikbaar zijn.",
+  "bd543e10-ee7c-4207-b6e6-e3a74ea69cee": "Nog {x-items}",
+  "b1af9723-7908-472c-94d4-00021a92a803": "Er is nog maar één plaats beschikbaar",
+  "5d697eff-bb5e-426a-9ccc-ce18d58891e8": "Er is nog maar één plaats beschikbaar, en die zit al in jouw winkelmandje",
+  "3b26c975-10ca-4b38-a86a-0ea27c0cd584": "Er zijn nog maar {x} plaatsen beschikbaar",
+  "42be9a70-2480-4510-93bf-94d6dfdc0628": "Er zijn nog maar {x} plaatsen beschikbaar, waarvan er al één in jouw winkelmandje zit",
+  "f9ecdf70-de9f-4349-a301-7139fee95029": "Er zijn nog maar {x} plaatsen beschikbaar, waarvan er al {4} in jouw winkelmandje zitten",
+  "bba032fe-170c-452e-96f2-4a53c30aa1c7": "Je kan maximaal {1-item-or-person-or-ticket} bestellen",
+  "f0966b9d-6eb5-4e89-a45e-fa3ced8f17fe": "Je kan maximaal {1-item-or-person-or-ticket} bestellen, en die zit al in jouw winkelmandje",
+  "02af3451-0f6a-4001-bc1d-8b35db5c09a9": "Je kan maximaal {5-items-or-persons-or-tickets} bestellen",
+  "6c2f78d7-0b5d-4264-8a55-9164ed4f2ddd": "Je kan maximaal {5-items-or-persons-or-tickets} bestellen, waarvan er al één in jouw winkelmandje zit",
+  "5bef85b2-cefb-4c43-8986-7f745807ba38": "Je kan maximaal {5-items-or-persons-or-tickets} bestellen, waarvan er al {4} in jouw winkelmandje zitten"
 }
