--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -239,6 +239,10 @@
     "original": "Korting geldt ook als gezinsleden zich inschrijven.",
     "translation": "Discount also applies if family members register."
   },
+  "02af3451-0f6a-4001-bc1d-8b35db5c09a9": {
+    "original": "Je kan maximaal {5-items-or-persons-or-tickets} bestellen",
+    "translation": "You can order up to {5-items-or-persons-or-tickets}"
+  },
   "02b05c0d-908b-4200-8fb8-5fc01f539514": {
     "original": "Je kan enkel wijzigen of een bericht via e-mail verzonden wordt als het bericht nog niet werd verzonden.",
     "translation": "You can only change whether a message is sent by email if it has not yet been sent."
@@ -3496,8 +3500,8 @@
     "translation": "Month"
   },
   "272cfcc9-e917-4e74-8952-076b8f2e8b23": {
-    "original": "Een lid moet een aansluiting hebben op de dag van de inschrijving.",
-    "translation": "A member must have an affiliation on the day of registration."
+    "original": "Leden moeten een andere aansluiting hebben (manueel aangemaakt of automatisch via een andere inschrijving bij een standaard inschrijvingsgroep) op het moment ze inschrijven, anders kunnen ze niet inschrijven.",
+    "translation": "Members must have a different affiliation (manually created or automatic via another registration in a default registration group) at the time of registration, otherwise they can't register."
   },
   "272f5dee-9f15-4afc-a07f-c6ff32b5d106": {
     "original": "België",
@@ -5211,6 +5215,10 @@
     "original": "Je hebt al voor elk werkjaar instellingen toegevoegd",
     "translation": "You have already added settings for each work year"
   },
+  "3b26c975-10ca-4b38-a86a-0ea27c0cd584": {
+    "original": "Er zijn nog maar {x} plaatsen beschikbaar",
+    "translation": "Only {x} spots left"
+  },
   "3b3be211-9a70-4345-abd6-760b39cef51d": {
     "original": "Overschakelen naar",
     "translation": "Switch to"
@@ -5778,6 +5786,10 @@
   "42bbd5c0-8789-4ca1-b667-1c9ecf4d0190": {
     "original": "De opgegeven client credentials zijn niet geldig.",
     "translation": "The client credentials you provided are not valid."
+  },
+  "42be9a70-2480-4510-93bf-94d6dfdc0628": {
+    "original": "Er zijn nog maar {x} plaatsen beschikbaar, waarvan er al één in jouw winkelmandje zit",
+    "translation": "Only {x} spots left, one of which is already in your cart"
   },
   "42dccb0d-88b1-4a18-9250-04aa969b1299": {
     "original": ". Verwijder of pas daar de link eerst aan als je die wilt hergebruiken.",
@@ -8019,6 +8031,10 @@
     "original": "Uploaden",
     "translation": "Upload"
   },
+  "5bef85b2-cefb-4c43-8986-7f745807ba38": {
+    "original": "Je kan maximaal {5-items-or-persons-or-tickets} bestellen, waarvan er al {4} in jouw winkelmandje zitten",
+    "translation": "You can order up to {5-items-or-persons-or-tickets}, of which {4} are already in your cart"
+  },
   "5c031764-a911-4861-b09e-621058dcf6d4": {
     "original": "Exporteer zaalplan",
     "translation": "Export seating plan"
@@ -8103,6 +8119,10 @@
     "original": "Demo webshops",
     "translation": "Demo online shops"
   },
+  "5cdeae87-7fc9-4b46-b384-f8dabb022a32": {
+    "original": "stuks",
+    "translation": "pieces"
+  },
   "5cfae96d-516c-4b37-9ddf-afd21cab6574": {
     "original": "Nog niet verstuurd",
     "translation": "Not yet sent"
@@ -8150,6 +8170,10 @@
   "5d614fe0-ec0d-47af-92bc-8c50f09717e2": {
     "original": "Wijzigingen opgeslagen",
     "translation": "Changes saved"
+  },
+  "5d697eff-bb5e-426a-9ccc-ce18d58891e8": {
+    "original": "Er is nog maar één plaats beschikbaar, en die zit al in jouw winkelmandje",
+    "translation": "Only one spot is left, and it is already in your cart"
   },
   "5d75775a-a4b5-426a-aea9-b1e75ee5f055": {
     "original": "bv. https://www.vereniging.be",
@@ -9451,6 +9475,10 @@
     "original": "bestellers",
     "translation": "customers"
   },
+  "6c2f78d7-0b5d-4264-8a55-9164ed4f2ddd": {
+    "original": "Je kan maximaal {5-items-or-persons-or-tickets} bestellen, waarvan er al één in jouw winkelmandje zit",
+    "translation": "You can order up to {5-items-or-persons-or-tickets}, one of which is already in your cart"
+  },
   "6c42ae73-6653-43e6-9d99-cfee321d23f4": {
     "original": "{address} kon niet als een adres worden herkend. Controleer of het formaat \"Straatnaam huisnummer, postcode stad\" werd gevolgd.",
     "translation": "{address} could not be recognized as an address. Please check that the format \"Street name house number, postcode city\" was used."
@@ -10187,6 +10215,10 @@
     "original": "Wissen",
     "translation": "Delete"
   },
+  "7447ec38-44b1-448e-8745-c5aebbdf846b": {
+    "original": "stuk",
+    "translation": "piece"
+  },
   "7453643b-fdb2-4aa1-9964-ddd71762c983": {
     "original": "Eenheidsprijs",
     "translation": "Unit price"
@@ -10298,6 +10330,10 @@
   "759abb2c-48d9-4eb6-bf3a-bd8284b28ffa": {
     "original": "Dit lid is niet ingeschreven voor een standaard leeftijdsgroep in het huidige werkjaar. Verwijder de functie of schrijf het lid in voor het huidige werkjaar.",
     "translation": "This member is not registered for a default age group in the current work year. Remove the role or register the member for the current work year."
+  },
+  "75b1afbb-3595-40da-a97f-fef5172fe58e": {
+    "original": "Verberg het beschikbare aantal stuks als voorraad groter is dan...",
+    "translation": "Hide the available number of pieces if the stock is greater than..."
   },
   "75b6fd85-2721-46fd-9ac0-8c96a782484c": {
     "original": "Jouw webshop blijft ook bereikbaar via",
@@ -15288,8 +15324,8 @@
     "translation": "Roles"
   },
   "b0d2d30a-f641-473a-91c7-4ab2297f25b1": {
-    "original": "Aansluiting is verplicht",
-    "translation": "Affiliation is mandatory"
+    "original": "Verplicht actieve aansluiting bij Stamhoofd vóór leden kunnen inschrijven",
+    "translation": "An active affiliation with Stamhoofd is required before members can register"
   },
   "b0d861f2-1bad-4feb-aec7-116a9a954260": {
     "original": "Mollie koppelen",
@@ -15362,6 +15398,10 @@
   "b19e199f-2b0e-444c-a4ee-0cdd0b3c6a35": {
     "original": "Je hebt nog geen instellingen toegevoegd.",
     "translation": "You have not yet added any settings."
+  },
+  "b1af9723-7908-472c-94d4-00021a92a803": {
+    "original": "Er is nog maar één plaats beschikbaar",
+    "translation": "Only one spot left"
   },
   "b1bb4138-62b1-4b25-a495-1a892bcfa8d6": {
     "original": "onderaan deze pagina.",
@@ -16259,6 +16299,10 @@
     "original": "Hier kan je eventeel afhaalinstructies kwijt (optioneel)",
     "translation": "You can put collection instructions here (optional)"
   },
+  "bba032fe-170c-452e-96f2-4a53c30aa1c7": {
+    "original": "Je kan maximaal {1-item-or-person-or-ticket} bestellen",
+    "translation": "You can order a maximum of {1-item-or-person-or-ticket}"
+  },
   "bba50e14-c3a1-4b18-9102-14f323453ca0": {
     "original": "Adres (van lid zelf)",
     "translation": "Address (of member itself)"
@@ -16430,6 +16474,10 @@
   "bd5418b3-5d06-43da-a0e6-4ced20644825": {
     "original": "Je zal e-mails kunnen versturen vanaf @{mailDomain} nadat je het instellen hebt voltooid.",
     "translation": "You will be able to send emails from @{mailDomain} after you have completed the setup."
+  },
+  "bd543e10-ee7c-4207-b6e6-e3a74ea69cee": {
+    "original": "Nog {x-items}",
+    "translation": "{x-items} left"
   },
   "bd54c45e-d3df-444e-b5d9-9722a6e08999": {
     "original": "Naam leden",
@@ -17270,6 +17318,10 @@
   "c6d477b8-8ca5-4d7e-b164-21630e5057b0": {
     "original": "Filter niet opslaan?",
     "translation": "Don't save filter?"
+  },
+  "c6dc2ed9-f90a-425d-970b-dde1ab00d564": {
+    "original": "Stamhoofd zal de de beschikbare voorraad verbergen als er nog meer dan {showStockBelow } stuks beschikbaar zijn.",
+    "translation": "Stamhoofd will hide the available stock if there are more than {showStockBelow } pieces left."
   },
   "c6e6c4b8-b3ad-4163-aa08-bbf22cc337aa": {
     "original": "De redirect URI behoud je best op de voorgestelde waarde.",
@@ -21015,6 +21067,10 @@
     "original": "De afzender van deze email bestaat niet meer. Probeer een andere afzender te kiezen.",
     "translation": "The sender for this email no longer exists. Please select a different sender."
   },
+  "f0966b9d-6eb5-4e89-a45e-fa3ced8f17fe": {
+    "original": "Je kan maximaal {1-item-or-person-or-ticket} bestellen, en die zit al in jouw winkelmandje",
+    "translation": "You can order a maximum of {1-item-or-person-or-ticket}, and it is already in your cart"
+  },
   "f0a3b61f-a736-47f7-b893-1c8c61555b50": {
     "original": "Er zijn meerdere TXT-records ingesteld voor",
     "translation": "Multiple TXT records have been set for"
@@ -21918,6 +21974,10 @@
   "f9ea9a60-9957-49ba-8d25-76b3e1d539a2": {
     "original": "(enkel verplicht invullen als:",
     "translation": "(only mandatory to fill in if:"
+  },
+  "f9ecdf70-de9f-4349-a301-7139fee95029": {
+    "original": "Er zijn nog maar {x} plaatsen beschikbaar, waarvan er al {4} in jouw winkelmandje zitten",
+    "translation": "Only {x} spots left, of which {4} are already in your cart"
   },
   "f9ed62e7-b956-41d0-b256-66cbe5b44ee9": {
     "original": "Is gelijk aan...",
